[gd_scene load_steps=4 format=2]

[ext_resource path="res://Fonts/Montserrat-ExtraBold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://MoveGroundForcesButton.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 35
font_data = ExtResource( 1 )

[node name="MoveGroundForcesButton" type="Button"]
margin_right = 400.0
margin_bottom = 60.0
rect_min_size = Vector2( 400, 60 )
flat = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -840.0
rect_min_size = Vector2( 200, 60 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 1, 0.592157, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 3
text = "Move Ground Forces"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="." to="." method="_on_MoveGroundForcesButton_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_MoveGroundForcesButton_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_MoveGroundForcesButton_pressed"]
